--- a/style.css
+++ b/style.css
@@ -1,46 +1,25 @@
-html, body{margin: 0; padding: 0;}
+body { background-color : lightgoldenrodyellow;}
+html, body {margin: 0; padding: 0;}
+ul {list-style: none;}
+a {text-decoration: none; color: #4d3943;}
 
-ul{list-style: none;
-margin : 0;
-padding: 0;}
+.mouse-animation li {width: 250px; background-color: rgba(255, 196, 226, 1.0); padding: 20px; 
+	border-top: solid 5px #8cabff; border-bottom: solid 5px #8cabff;
+						transition: opacity 0.5s, margin-left 0.5s;}
 
-a {color: #000000; text-decoration: none;}
-.menu ul{
-	overflow: hidden;
-	background-color: pink}
-.menu li{
-	float: left;
-	width: 100px;
-	background-color: skyblue;
-	border-top:solid 1px red; 
-	border-bottom: solid 1px red ;
-	border-left: solid 1px red;
+.mouse-animation li:hover { opacity: 0.5; margin-left: 10px; background-color: rgba(255, 196, 226, 0.5);}
+.mouse-animation li a {color: rgba(106, 0, 156, 1.0) ; font-size: 20px;font-weight: 1000;}
 
-	/*border: solid 2px purple;*/
+/*상자 옮기기*/ 
 
-}
-.menu li a {display: block;
-text-align: center;
-padding-top: 20px
-padding-bottom: 20px;}
+.move-box {position: relative; width: 200px; height: 200px;
+background-color: greenyellow; animation-name: movebox; animation-duration: 4s;animation-timing-function: linear; animation-delay: 1s; animation-iteration-count: infinite;direction: alternate;
+animation-fill-mode: backwards;}
 
-/*height o -> line-height height값과 동일
-height x -> padding-top,bottom same amount
-메뉴 hover 칸 전체 손클릭 표시*/
-.menu li a:hover{color: grey} 
-
-.menu li:last-child {border-right: solid 1px red;}
-
-.kakao-lists li{margin-bottom: 20px}
-
-.kakao-lists li  a{display: block;
-padding-left: 25px}
-
-.kakao-lists li img {border-radius: 20px;
-margin-right:  10px;}
-.kakao-list li .kakao-info {
-	display: inline-block;
-}
-.kakao-list li .kakao-info h3 { margin: 0; font-size: 10px }
-.kakao-list li .kakao-info span {font-size: 14px color: grey;
+@keyframes movebox {
+	0% { background-color: greenyellow; left: 200px; top: 200px;}
+	25% {background: darkgreen; left: 700px; top: 200px;}
+	50% {border-radius: 50%; background-color: brown; left: 700px; top: 700px;}
+	75% {background-color: lightblue; left: 200px; top: 700px;}
+	100%{background-color: white; left: 200px; right: 200px;}
 }
