--- a/style.css
+++ b/style.css
@@ -1,25 +1,101 @@
-body { background-color : lightgoldenrodyellow;}
-html, body {margin: 0; padding: 0;}
-ul {list-style: none;}
-a {text-decoration: none; color: #4d3943;}
+body{background-color: black;} 
 
-.mouse-animation li {width: 250px; background-color: rgba(255, 196, 226, 1.0); padding: 20px; 
-	border-top: solid 5px #8cabff; border-bottom: solid 5px #8cabff;
-						transition: opacity 0.5s, margin-left 0.5s;}
+.outer-border {display: flex; justify-content: center; align-items: center;
+width: 200px; height: 200px; border: solid 15px red ; border-radius: 50%;
 
-.mouse-animation li:hover { opacity: 0.5; margin-left: 10px; background-color: rgba(255, 196, 226, 0.5);}
-.mouse-animation li a {color: rgba(106, 0, 156, 1.0) ; font-size: 20px;font-weight: 1000;}
+margin:0 auto ; margin-top: 200px;
+animation : outerborder 4s infinite ;}
 
-/*상자 옮기기*/ 
+@keyframes outerborder {
+	0% {border-color: red; transform: scale(1);}
+	25% {border-color: red; transform: scale(1,2);}
+	50% {border-color: red; transform: scale(1,3);}
+	75% {border-color: red; transform: scale(1,2);}
+	100% {border-color: red; transform: scale(1);}
 
-.move-box {position: relative; width: 200px; height: 200px;
-background-color: greenyellow; animation-name: movebox; animation-duration: 4s;animation-timing-function: linear; animation-delay: 1s; animation-iteration-count: infinite;direction: alternate;
-animation-fill-mode: backwards;}
+}
 
-@keyframes movebox {
-	0% { background-color: greenyellow; left: 200px; top: 200px;}
-	25% {background: darkgreen; left: 700px; top: 200px;}
-	50% {border-radius: 50%; background-color: brown; left: 700px; top: 700px;}
-	75% {background-color: lightblue; left: 200px; top: 700px;}
-	100%{background-color: white; left: 200px; right: 200px;}
+.inner-border{width: 75px height: 75px; border:5px solid purple;
+box-sizing: border-box;
+animation: innerborder 4s infinite alternate;}
+
+@keyframes innerborder {
+	0% {transform: rotate(0deg);}
+	25% {border-width: 50px }
+	50% {border-width: 10px transform: rotate(0deg);}
+	100% {transform: rotate(360deg);}
+}
+
+.mario-container {position: relative;width: 500px; height: 500px
+border:solid 10px white;
+margin: 0 auto;
+margin-top: 200px;}
+
+.mario-container .mario-coin {width: 70px; height:70px; background-color: yellow;
+border-radius: 50%; 
+margin: 0 auto; margin-top: 100px;
+
+animation: jumpcoin 0.8s linear infinite;}
+
+@keyframes jumpcoin {
+	0% {opacity: 1; transform: translateY(0);}
+	50% {opacity: 0; transform: translateY(-100px)rotateY(180deg);}
+	100% {opacity: 0; transform: translateY(-100px)rotateY(360deg);}
+}
+
+.mario-container .mario-box {width: 100px; height: 100px; background-color: blue; 
+margin: 0 auto; 
+animation: jumpbox 0.5s linear infinite alternate ; }
+
+@keyframes jumpbox {
+	0% {transform: translate(0px);}
+	50% {transform: translate(-10px);}
+	100% {transform: translate(0px);}
+
+}
+
+.hover-image {
+	cursor: pointer;
+	overflow: hidden;
+	position: relative;
+	width: 400px;
+	border: solid 10px #000000;
+}
+.hover-image img {
+	width: 100%;
+	vertical-align: middle;
+	transition: transform 1s linear;
+}
+.hover-image:hover img{
+	transform: scale(1.3);
+}
+.hover-image .image-info{
+	box-sizing: border-box;
+	position: absolute;
+	width: 100%;
+
+	background-color: rgba(0,0,0,0.5);
+	padding: 20px;
+
+	left: 0;
+	bottom: -150px;
+
+	transition: bottom 1s linear;
+}
+
+.hover-image:hover .image-info {
+	bottom: 0;
+}
+.hover-image .image-info h2
+.hover-image .image-info p {
+	margin: 0;
+	padding: 0;
+	color: #ffffff;}
+.hover-image .image-info h2{
+	font-size: 20px;
+	color: #ffffff;
+}
+.hover-image .image-info p{
+	font-size: 15px;
+	color: #ffffff;
 }
