--- a/mediastyle.css
+++ b/mediastyle.css
@@ -1,4 +1,4 @@
-html, body {
+/*/*html, body {
 	margin: 0;
 	padding: 0;
 }
@@ -16,7 +16,7 @@ a {text-decoration: none; color: #4d3943;}
 .mouse-animation li a {color: rgba(106, 0, 156, 1.0) ; font-size: 20px;font-weight: 1000;}
 
 /*상자 옮기기*/ 
-
+/*
 .move-box {position: relative; width: 200px; height: 200px;
 background-color: greenyellow; animation-name: movebox; animation-duration: 4s;animation-timing-function: linear; animation-delay: 1s; animation-iteration-count: infinite;direction: alternate;
 animation-fill-mode: backwards;}
@@ -56,7 +56,7 @@ padding: 0; }
 1024px ~ pc*/
 
 
-@media (min-width: 300px) and (max-width: 767px) {
+/*@media (min-width: 300px) and (max-width: 767px) {
 	.pc {
 		display: none;
 		color: hotpink;
@@ -77,15 +77,101 @@ h1 {font-size: 20px;
 background-color: yellow;}
 /*-> mobile*/
 
-@media(min-width: 768px){
+/*@media(min-width: 768px){
 	h1 {font-size: 40;
 		background-color: hotpink;}
 }
 /*-> pc*/
 
-@media(min-width :1024px) {
+/*@media(min-width :1024px) {
 	h1 {
 		font-size: 80px;
 		background-color: gray;
+	}
+}
+
+*/
+
+/*
+
+.media-menu { 
+list-style: none;
+margin: 0;
+padding: 0;
+
+display: flex;
+justify-content: space-between;
+align-items: center;
+width: 700px;
+background-color: black; }
+
+.media-menu a {
+	color: black;
+	text-decoration: none;
+}
+
+.media-menu li {
+	width: 150px;
+	background-color: yellow;
+	border: solid 5px red;
+	padding: 5px 15px;
+	text-align: center;
+}
+
+@media (min-width: 320px) and (max-width: 767px){
+	.media-menu{
+		flex-direction: column;
+		width: 190px;
+		align-items: flex-start;
+	}
+	.media-menu li:last-child {
+		margin-bottom: 0;
+	}
+}*/
+
+
+/*
+*/
+
+.column {
+	width: 355px;
+background-color: #ffffff;
+border: solid 2px red;
+margin-bottom: 10px;}
+
+.column:nth-child(4),
+.column:nth-child(5),
+.column:nth-child(6) {
+	margin-bottom: 0%;
+}
+
+.column img {
+	width:  100%;
+}
+
+.image-info {
+	padding: 20px 0;
+	text-align: center;
+
+}
+.image-info h2 {
+	margin: 0;
+}
+@media(min-width: 540px) and (max-width: 720px) {
+	.container {
+		width: 720px;
+	}
+	.column:nth-child(4) {
+margin-bottom: 10px;
+	}
+
+}
+
+@media (min-width: 320px) and (max-width: 539px) {
+	.container {
+		width: 100%;
+	}
+	.column {
+		width: 100%;
 	}
 }
