--- a/style.css
+++ b/style.css
@@ -1,101 +1,330 @@
-body{background-color: black;} 
-
-.outer-border {display: flex; justify-content: center; align-items: center;
-width: 200px; height: 200px; border: solid 15px red ; border-radius: 50%;
-
-margin:0 auto ; margin-top: 200px;
-animation : outerborder 4s infinite ;}
-
-@keyframes outerborder {
-	0% {border-color: red; transform: scale(1);}
-	25% {border-color: red; transform: scale(1,2);}
-	50% {border-color: red; transform: scale(1,3);}
-	75% {border-color: red; transform: scale(1,2);}
-	100% {border-color: red; transform: scale(1);}
-
-}
-
-.inner-border{width: 75px height: 75px; border:5px solid purple;
-box-sizing: border-box;
-animation: innerborder 4s infinite alternate;}
-
-@keyframes innerborder {
-	0% {transform: rotate(0deg);}
-	25% {border-width: 50px }
-	50% {border-width: 10px transform: rotate(0deg);}
-	100% {transform: rotate(360deg);}
-}
-
-.mario-container {position: relative;width: 500px; height: 500px
-border:solid 10px white;
-margin: 0 auto;
-margin-top: 200px;}
-
-.mario-container .mario-coin {width: 70px; height:70px; background-color: yellow;
-border-radius: 50%; 
-margin: 0 auto; margin-top: 100px;
-
-animation: jumpcoin 0.8s linear infinite;}
-
-@keyframes jumpcoin {
-	0% {opacity: 1; transform: translateY(0);}
-	50% {opacity: 0; transform: translateY(-100px)rotateY(180deg);}
-	100% {opacity: 0; transform: translateY(-100px)rotateY(360deg);}
-}
-
-.mario-container .mario-box {width: 100px; height: 100px; background-color: blue; 
-margin: 0 auto; 
-animation: jumpbox 0.5s linear infinite alternate ; }
-
-@keyframes jumpbox {
-	0% {transform: translate(0px);}
-	50% {transform: translate(-10px);}
-	100% {transform: translate(0px);}
-
-}
-
-.hover-image {
-	cursor: pointer;
-	overflow: hidden;
-	position: relative;
-	width: 400px;
-	border: solid 10px #000000;
-}
-.hover-image img {
-	width: 100%;
-	vertical-align: middle;
-	transition: transform 1s linear;
-}
-.hover-image:hover img{
-	transform: scale(1.3);
-}
-.hover-image .image-info{
-	box-sizing: border-box;
-	position: absolute;
-	width: 100%;
-
-	background-color: rgba(0,0,0,0.5);
-	padding: 20px;
-
-	left: 0;
-	bottom: -150px;
-
-	transition: bottom 1s linear;
-}
-
-.hover-image:hover .image-info {
-	bottom: 0;
-}
-.hover-image .image-info h2
-.hover-image .image-info p {
+/* Default css*/
+html, body {
 	margin: 0;
 	padding: 0;
-	color: #ffffff;}
-.hover-image .image-info h2{
-	font-size: 20px;
-	color: #ffffff;
 }
-.hover-image .image-info p{
-	font-size: 15px;
-	color: #ffffff;
+
+body {
+	overflow-x: hidden ;
 }
+
+h1, h2, h3, h4, h5, h6, p {
+	margin: 0;
+	padding: 0;
+}
+
+button {
+	border: none;
+	background-color: transparent;
+}
+
+.clearfix {
+	clear: both;
+}
+
+/*intro*/
+#intro {
+	width: 100%;
+	height: 1600px;
+	background-image: url(../img/intro/intro_bg.png);
+}
+
+#intro .introWrap {
+	position: relative;
+
+	width: 760px;
+	height: 516px;
+	background-color: yellow;
+
+	left: 50%;
+	margin-left: -380px;
+
+}
+
+#intro .introWrap .logo {
+	position: absolute;
+
+	width: 760px;
+	height: 516px;
+	background-image: url(../img/intro/logo.png);
+
+	z-index: 100;
+}
+
+#intro .introWrap .lion {
+	position: 161px;
+	height: 161px;
+	background-image: url(../img/intro/lion.png);
+
+	/*margin: 80px 0 0 30px;*/
+/*	top: 80px;
+	left: 30px;*/
+
+}
+
+#intro .introWrap .rabbit {
+	position: absolute;
+
+	width: 105px;
+	height: 129px;
+	background-image: url(../img/intro/rabbit.png);
+
+	margin: 90px 0 0 580px;
+}
+
+#intro .introWrap .bear {
+	position: absolute;
+
+	width: 112px;
+	height: 105px;
+	background-image: url(../img/intro/bear.png);
+	background-repeat: no-repeat;
+
+	margin: 310px 0 0 560px;
+
+	z-index: 200;
+}
+
+#intro .introWrap .monkey {
+	position: absolute;
+
+	width: 85px;
+	height: 93px;
+	background-image: url(../img/intro/monkey.png);
+
+	margin: 310px 0 0 50px;
+
+	z-index: 200;
+
+}
+
+#intro .cloudWrap {
+	position: relative;
+
+	width: 100%;
+	height: 1050px;
+	background-color: pink;
+}
+
+#intro .cloudWrap .leftCloud {
+	position: absolute;
+
+	width: 934px;
+	height: 816px;
+	background-image: url(../img/intro/cloud1.png);
+
+	left: 0;
+}
+
+#intro .cloudWrap .rightCloud {
+	position: absolute;
+
+	width: 834px;
+	height: 858px;
+	background-image: url(../img/intro/cloud2.png);
+	right: 0;
+
+}
+
+#intro .cloudWrap .dragonfly {
+	position: absolute;
+
+	width: 366px;
+	height: 228px;
+	background-image: url(../img/intro/dragonfly.png);
+	top: 800px;
+}
+
+
+
+/* Farm1 */
+#farm1 {
+	position: relative;
+
+	width: 100%;
+	height: 800px;
+	background-image: url(../img/farm/farm1/farm1_bg.png);
+}
+
+#farm1 .leftRice1 {
+	position: absolute;
+
+	width: 390px;
+	height: 670px;
+	background-image: url(../img/farm/farm1/leftrice.png);
+
+	left: 0;
+}
+
+#farm1 .rightRice1 {
+	position: absolute;
+
+	width: 335px;
+	height: 570px;
+	background-image: url(../img/farm/farm1/rightrice.png);
+
+	right: 0;
+	top: 100px;
+}
+
+#farm1 .farmer {
+	position: absolute;
+
+	width: 747px;
+	height: 1078px;
+	background-image: url(../img/farm/farm1/farmer.png);
+
+	left: 50%;
+	margin-left: -310px;
+}
+
+#farm1 .farmSpeechWrap {
+	position: relative;
+
+	top: 250px;
+	left: 150px;
+}
+
+#farm1 .farmSpeechWrap .farmSpeech {
+	color: #895c2f;
+	font-size: 18px;
+	line-height: 27px;
+}
+
+
+
+
+/* Farm2 */
+#farm2 {
+	position: relative;
+
+	width: 100%;
+	height: 850px;
+	background-image: url(../img/farm/farm2/farm2_bg.png);
+}
+
+#farm2 .leftRice2 {
+	float: left;
+
+	width: 250px;
+	height: 850px;
+	background-image: url(../img/farm/farm2/leftrice2.png);
+}
+
+#farm2 .rightRice2 {
+	float: right;
+
+	width: 236px;
+	height: 850px;
+	background-image: url(../img/farm/farm2/rightrice2.png);
+}
+
+#farm2 .scarecrow {
+	position: absolute;
+
+	width: 103px;
+	height: 206px;
+	background-image: url(../img/farm/farm2/scarecrow.png);
+
+	margin: 200px 0 0 300px;
+}
+
+
+
+/* farm3 */
+#farm3 {
+	position: relative;
+
+	width: 100%;
+	height: 850px;
+	background-image: url(../img/farm/farm3/farm3_bg.png);
+}
+
+#farm3 .farm3Window{
+	position: absolute;
+
+	width: 247px;
+	height: 169px;
+	background-image: url(../img/farm/farm3/window.png);
+
+	margin: 100px 0 0 100px;
+}
+
+#farm3 .machineWrap {
+	position: relative;
+
+	width: 600px;
+	height: 455px;
+	/*background-color: yellow;*/
+
+	left: 50%;
+	margin-left: -285px;
+	top: 150px;
+}
+
+#farm3 .machineWrap .machine1 {
+	position: absolute;
+	width: 586px;
+	height: 455px;
+	background-image: url(../img/farm/farm3/machine1.png);
+
+	z-index: 900;
+}
+
+#farm3 .machineWrap .sawShadow {
+	position: absolute;
+
+	width: 95px;
+	height: 95px;
+	background-image: url(../img/farm/farm3/sawshadow.png);
+
+	margin: 145px 0 0 145px;
+}
+
+#farm3 .machineWrap .saw1,
+#farm3 .machineWrap .saw2 {
+	position: absolute;
+	width: 95px;
+	height: 95px;
+	background-image: url(../img/farm/farm3/saw.png);
+}
+
+#farm3 .machineWrap .saw1 {
+	margin: 140px 0 0 140px;
+}
+
+#farm3 .machineWrap .saw2 {
+	margin: 140px 0 0 350px;
+}
+
+#farm3 .machineWrap .timer {
+	position: absolute;
+
+	width: 103px;
+	height: 104px;
+	background-image: url(../img/farm/farm3/second.png);
+
+	margin: 125px 0 0 45px;
+
+	z-index: 999;
+}
+
+#farm3 .machineWrap .machineBird {
+	position: absolute;
+
+	width: 44px;
+	height: 49px;
+	background-image: url(../img/farm/farm3/machinebird.png);
+
+	margin: 220px 0 0 20px;
+
+	z-index: 999;
+}
+
+#farm3 .farm3Bubble {
+	position: absolute;
+
+	top: 350px;
+	right: 80px;
+}
+
