--- a/stylenaver.css
+++ b/stylenaver.css
@@ -533,3 +533,400 @@ main #blog_wrap .blog_media_wrap ul .blog_media_info span {
 #main-footer .corp_lists li a {
 	font-size: 12px;
 }
+
+
+.shop-container { 
+width: 1240px;
+margin: 0 auto; }
+
+#shop-body {
+	background-color: #e9ecef ;
+}
+
+#shop-header #shop-header-top {
+width: 100%;
+height: 36px;
+background-color: #03c75a;
+border-bottom: solid 1px #e8e8e8;
+}
+
+#shop-header #shop-header-middle {
+	width: 100%;
+	height: 66px;
+	background-color: #03c75a; 
+}
+
+#shop-header nav {
+	width: 100%;
+	border-top: solid 1px #e8e8e8;
+	border-bottom: solid 1px #e8e8e8;
+}
+
+#shop-header nav ul {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	padding: 13px 0 8px 0;
+
+}
+
+#shop-header nav ul li {
+	margin-right: 16px;
+}
+
+#shop-main .list-wrap {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: stretch;
+}
+
+
+#shop-main .list-item {
+	position: relative;
+	width: 308px;
+	height: 496px;
+	/*background-color: #ffffff;*/
+
+	margin-bottom: 20px;
+}
+
+#shop-main .list-item.banner img {
+	width: 100%;
+	height: 100%;
+}
+
+#shop-main .list-item .category-wrap {
+	overflow: hidden;	
+}
+
+#shop-main .list-item .category-wrap .category-left {
+	float: left;
+	width: 124px;
+	height: 100%;
+	background-color: #333949;
+}
+
+#shop-main .list-item .category-wrap .category-left h3 {
+	padding: 14px 0 14px 13px;
+	border-bottom: 1px solid #2b313f;
+
+	font-size: 13px;
+	color: rgba(255, 255, 255, 0.46);
+}
+
+#shop-main .list-item .category-wrap .category-left ul {
+
+}
+
+#shop-main .list-item .category-wrap .category-left li {
+
+}
+
+#shop-main .list-item .category-wrap .category-left a {
+	display: block;
+
+	padding: 7px 8px;
+
+
+	font-size: 13px;
+	color: rgba(255, 255, 255, 0.46);
+	font-weight: 700;
+}
+
+#shop-main .list-item .category-wrap .category-right {
+	float: right;
+	width: 182px;
+	height: 100%;
+	background-color: #ffffff;
+}
+
+
+#shop-main .list-item .category-wrap .category-right-top {
+	width: 100%;
+	height: 306px;
+	border-bottom: solid 1px #e7e7e7;
+
+	text-align: center;
+}
+
+#shop-main .list-item .category-wrap .category-right-top .category-info {
+	padding: 20px 0;
+	/*text-align: center;*/
+}
+
+#shop-main .list-item .category-wrap .category-right-top .headline,
+#shop-main .list-item .category-wrap .category-right-bottom .headline {
+	display: inline-block;
+
+	font-size: 12px;
+	border: solid 1px #00ab33;
+	color: #00ab33;
+
+	margin-bottom: 7px;
+}
+
+
+#shop-main .list-item .category-wrap .category-right-top .category-info h3 {
+	font-size: 18px;
+}
+
+#shop-main .list-item .category-wrap .category-right-top .category-info .price {
+	font-size: 16px;
+	color: skyblue;
+}
+
+#shop-main .list-item .category-wrap .category-right-top .image-wrap {
+	/*text-align: center;*/
+}
+
+#shop-main .list-item .category-wrap .category-right-bottom {
+	padding-top: 20px;
+
+	text-align: center;
+}
+
+#shop-main .list-item .category-wrap .category-right-bottom .tag-wrap .tag {
+	display: inline-block;
+	width: auto;
+	max-width: 75px;
+	height: 24px;
+	background-color: #e8eef4;
+
+	margin: 6px 1px 0 1px;
+	padding: 0 5px;
+    
+    line-height: 26px;
+	font-size: 12px;
+	color: #666;
+	vertical-align: top;
+}
+
+
+#shop-main .list-item .list-half {
+	width: 100%;
+	height: 240px;
+	background-color: #ffffff;
+}
+
+#shop-main .list-item .list-half.list-half-top {
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+#shop-main .list-item .list-half.list-half-bottom {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+}
+
+
+#shop-main .list-item .list-half .list-half-header {
+	position: relative;
+
+	width: 100%;
+	height: 62px;
+	background-color: #ffffff;
+	border-bottom: solid 1px #e7e7e7;
+
+	text-align: center;
+
+	padding-top: 10px;
+}
+
+#shop-main .list-item .list-half .list-half-header .headline {
+	display: inline-block;
+	border: solid 1px #000000;
+	padding: 2px 4px;
+	margin-bottom: 5px;
+}
+
+#shop-main .list-item .list-half .list-half-header h3 {
+	font-size: 14px;
+}
+
+
+
+
+
+
+#shop-main .list-item .list-half .list-half-header .half-overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+#shop-main .list-item .list-half .list-half-header.list-half-bg {
+	background-color: green;
+	border-bottom: solid 1px #ffffff;
+	padding-top: 0;
+}
+
+#shop-main .list-item .list-half .list-half-header.list-half-bg .shop-title-border {
+	position: relative;
+	display: inline-block;
+	border: solid 1px #ffffff;
+	padding: 2px 4px;
+
+	color: #ffffff;
+
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+#shop-main .list-item .list-half .content-lists {
+	overflow: hidden;
+	height: 177px;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-3 li {
+	float: left;
+	width: 33.33%;
+	height: 100%;
+	border-right: solid 1px #f0f0f0;
+
+	text-align: center;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-3 li:last-child {
+	border-right: none;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-3 li img {
+	width: 100%;
+	height: 100px;
+	margin-bottom: 5px;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-3 li h3 {
+	font-size: 13px;
+	margin-bottom: 5px;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-3 li span {
+	font-size: 12px;
+}
+
+
+#shop-main .list-item .list-half .content-lists.content-lists-2 {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+	padding-top: 11px;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-2 li {
+	width: 130px;
+	height: 150px;
+	margin-right: 8px;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-2 li:last-child {
+	margin-right: 0;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-2 li .content-image-wrap {
+	position: relative;
+	width: 130px;
+	height: 90px;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-2 li .content-image-wrap img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-2 li .content-image-wrap .discount {
+	position: absolute;
+	display: block;
+	width: 42px;
+	height: 42px;
+	background-color: orange;
+	border-radius: 50%;
+
+	font-size: 14px;
+	color: #ffffff;
+	line-height: 42px;
+    text-align: center;
+
+	top: 6px;
+	right: 5px;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-2 li h3 {
+	font-size: 13px;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-2 li .price {
+	color: #62a7ee;
+	font-size: 12px;
+}
+
+#shop-main .list-item .list-half .content-lists.content-lists-2 li .price em {
+	font-size: 14px;
+	font-weight: 700;
+	font-style: normal;
+}
+
+#shop-main .list-item .list-row-3 {
+	background-color: #ffffff;
+	border-top: none;
+}
+
+#shop-main .list-item .list-row-3 li {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+
+	border-bottom: solid 1px #f0f0f0;
+	padding: 14px 19px 11px 19px;
+}
+
+#shop-main .list-item .list-row-3 li:last-child {
+	border-bottom: none;
+}
+
+#shop-main .list-item .list-row-3 li .list-image-wrap {
+	width: 90px;
+	height: 60px;
+	margin-right: 10px;
+}
+
+#shop-main .list-item .list-row-3 li .list-image-wrap img {
+	width: 100%;
+	height: 100%;
+}
+
+#shop-main .list-item .list-row-3 li .list-row-info span {
+	font-size: 12px;
+}
+
+#shop-main .list-item .list-row-3 li .list-row-info h3 {
+	font-size: 13px;
+}
+
+#shop-main .brand-wrap {
+	background-color: #ffffff;
+}
+
+#shop-main .brand-wrap .brand-lists{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	padding: 18px 18px;
+}
+
+#shop-main .brand-wrap .brand-lists li {
+	width: 64px;
+	height: 64px;
+}
+
+#shop-main .brand-wrap .brand-lists li img {
+	width: 100%;
+	height: 100%;
+}
