--- a/stylenaver.css
+++ b/stylenaver.css
@@ -1685,3 +1685,297 @@ height: 100%;
 	display: block;
 }
 
+#webtoon-footer {
+	padding-bottom: 78px;
+
+	font-size: 12px;
+}
+
+#webtoon-footer .webtoon-container {
+	border-top: solid 1px #e6e7e8;
+
+	padding-top: 40px;
+}
+
+#webtoon-footer .webtoon-footer-wrap {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: center;
+
+	margin-bottom: 32px;
+}
+
+#webtoon-footer .webtoon-footer-wrap .webtoon-footer-left,
+#webtoon-footer .webtoon-footer-wrap .webtoon-footer-right {
+	width: 50%;
+	padding-left: 25px;
+}
+
+#webtoon-footer .webtoon-footer-wrap .webtoon-footer-right {
+	border-left: solid 1px grey;
+}
+
+#webtoon-footer .webtoon-footer-wrap ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+
+	margin-bottom: 8px;
+}	
+
+#webtoon-footer .webtoon-footer-wrap ul li {
+	/*margin-right: 5px;*/
+}
+
+#webtoon-footer .webtoon-footer-wrap ul li:first-child:before {
+	content: initial;
+}
+
+#webtoon-footer .webtoon-footer-wrap ul li:before {
+	display: inline-block;
+	content: "";
+	width: 1px;
+	height: 11px;
+	background-color: #d9d9d9;
+
+	vertical-align: -1px;
+	margin: 0 8px;
+}
+
+#webtoon-footer .webtoon-footer-wrap ul li a  {
+
+}
+
+#webtoon-footer .webtoon-footer-wrap span {
+	text-transform: uppercase;
+}
+
+#webtoon-footer .webtoon-footer-paragraph {
+	padding-left: 25px;
+}
+
+
+
+/* 웹툰 상세 페이지 */
+.webtoon-detail {
+	padding-top: 0;
+}
+
+.webtoon-detail .nav-1 {
+	background-color: #fafafa;
+	border-bottom: solid 1px #ededed;
+}
+
+.webtoon-detail .nav-1 ul {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
+.webtoon-detail .nav-1 ul li {
+	width: auto;
+	height: 36px;
+	margin-right: 28px;
+}
+
+.webtoon-detail .nav-1 ul li:last-child {
+	margin-right: 0;
+}
+
+.webtoon-detail .nav-1 ul li a {
+	display: block;
+	width: 100%;
+	height: 100%;
+
+	line-height: 36px;
+	text-align: center;
+
+	font-size: 12px;
+	color: #434343;
+}
+
+
+.webtoon-detail .nav-2 {
+	padding-top: 20px;
+
+	border-bottom: solid 1px #e5e5e5;
+}
+
+.webtoon-detail .nav-2 ul {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+.webtoon-detail .nav-2 ul li {
+	margin-right: 14px;
+	padding-bottom: 5px;
+	border-bottom: solid 2px transparent;
+}
+
+.webtoon-detail .nav-2 ul li.on {
+	border-color: #00d564;
+	margin-bottom: -1px;
+	font-weight: 700;
+}
+
+.webtoon-detail .nav-2 ul li:last-child {
+	margin-right: 0;
+}
+
+.webtoon-detail .nav-2 ul li a {
+	font-size: 13px;
+}
+
+.webtoon-detail #webtoon-this-month {
+	padding: 20px 0;
+}
+
+.webtoon-detail #webtoon-this-month h2 {
+	font-size: 16px;
+	margin-bottom: 8px;
+}
+
+.webtoon-detail #webtoon-this-month .webtoon-this-lists {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.webtoon-detail #webtoon-this-month .webtoon-this-list {
+	width: 218px;
+}
+
+.webtoon-detail #webtoon-this-month .webtoon-this-list .this-image-wrap {
+	position: relative;
+	width: 100%;
+	height: 120px;
+	margin-bottom: 5px;
+}
+
+.webtoon-detail #webtoon-this-month .webtoon-this-list .this-image-wrap img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+.webtoon-detail #webtoon-this-month .webtoon-this-list .this-image-wrap .new-mark {
+	position: absolute;
+	width: 30px;
+	background-color: #00c85e;
+	color: #ffffff;
+}
+
+
+.webtoon-detail #webtoon-this-month .webtoon-this-list h3 {
+	font-size: 14px;
+	margin-bottom: 5px;
+}
+
+.webtoon-detail #webtoon-this-month .webtoon-this-list .author {
+	display: block;
+	font-size: 14px;
+	margin-bottom: 5px;
+}
+
+.webtoon-detail #webtoon-this-month .webtoon-this-list p {
+	font-size: 14px;
+}
+
+
+.webtoon-detail #webtoon-total-day {
+	padding-top: 20px;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-total-title-wrap {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+
+	padding-bottom: 8px;
+	border-bottom: solid 1px #eaeaea;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-total-title-wrap h2{
+	font-size: 16px;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-total-title-wrap ul {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-total-title-wrap li {
+	margin-right: 10px;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-total-title-wrap li:last-child {
+	margin-right: 0;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-total-title-wrap a {
+	font-size: 12px;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-day-lists {
+	display: flex;
+	flex-direction: row;
+	border-bottom: solid 1px #f4f4f4;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-day-list {
+	width: 14.2855%;
+	text-align: center;
+	border-right: solid 1px #f4f4f4;
+
+	padding: 0 8px;
+}
+
+
+.webtoon-detail #webtoon-total-day .webtoon-day-list.active {
+	background-color: #3a3a3a;
+	border-color: #3a3a3a;
+	color: #fbcb00;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.webtoon-detail #webtoon-total-day .webtoon-day-list:last-child {
+	border-right: none;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-day-list span {
+	display: block;
+	height: 32px;
+	line-height: 32px;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-day-list .webtoon-list {
+	margin-bottom: 10px;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-day-list .webtoon-list img {
+	width: 100%;
+	margin-bottom: 5px;
+}
+
+.webtoon-detail #webtoon-total-day .webtoon-day-list span,
+.webtoon-detail #webtoon-total-day .webtoon-day-list .webtoon-list h3 {
+	font-size: 14px;
+}
