--- a/stylenaver.css
+++ b/stylenaver.css
@@ -4414,5 +4414,277 @@ height: 100%;
 	font-size: 20px;
 }
 
+.esport-flex-between {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	align-content: stretch;
+}
+
+.esport-flex-start {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: center;
+	align-content: stretch;
+}
+
+.esport-flex-center {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+}
+
+.esport-flex-end {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	align-items: center;
+	align-content: stretch;
+}
+
+.esport-container {
+	width: 1280px;
+	margin: 0 auto;
+}
+
+
+
+#esport-header {
+	position: fixed;
+	width: 100%;
+	background-color: #151618;
+	border-bottom: solid 1px grey;
+
+	left: 0;
+	top: 0;
+
+	z-index: 99999;
+}
+
+#esport-header #esport-nav {
+	/*height: 60px;*/
+}
+
+#esport-header #esport-nav a {
+	color: #ffffff;
+}
+
+#esport-header #esport-nav .nav-wrap {
+	height: 60px;
+}
+
+#esport-header #esport-nav .left h1 {
+	font-size: 20px;
+}
+
+#esport-header #esport-nav .left li {
+
+}
+
+#esport-header #esport-nav .left li:before {
+	display: inline-block;
+	content: '';
+	width: 1px;
+	height: 14px;
+	background-color: rgba(160, 165, 182, .3);
+	margin: 0 12px;
+}
+
+#esport-header #esport-nav .left li a {
+	color: grey;
+}
+
+
+#esport-header #esport-nav .center li {
+	margin-right: 24px;
+}
+
+#esport-header #esport-nav .center li:last-child {
+	margin-right: 0;
+}
+
+#esport-header #esport-nav .center li a {
+	display: inline-block;
+	width: 30px;
+	height: 60px;
+
+	line-height: 60px;
+	border-bottom: solid 5px transparent;
+
+	color: grey;
+	font-size: 17px;
+	text-align: center;
+}
+
+#esport-header #esport-nav .center li a:hover {
+	color: darkgrey;
+}
+
+#esport-header #esport-nav .center li a.active {
+	color: #ffffff;
+	border-bottom: solid 5px #ffffff;
+}
+
+#esport-header #esport-nav .right a {
+	border:  solid 1px hsla(0, 0%, 80%, .3);
+	border-radius: 8px;
+
+	padding: 4px 8px;
+
+	font-size: 12px;
+}
+
+#esport-header #esport-nav .right a:last-child {
+	margin-left: 10px;
+}
+
+
+
+#esport-main {
+	padding-top: 61px;
+}
+
+
+#esport-main-top {
+	background-color: #151618;
+}
+
+#esport-main-top .timeline-wrap {
+	padding: 20px 0;
+}
+
+#esport-main-top .timeline-wrap ul {
+	width: 100%;
+}
+
+#esport-main-top .timeline-wrap li {
+	width: 16.6%;
+	background-color: #272b31;
+	border-radius: 10px;
+	margin-right: 1px;
+}
+
+#esport-main-top .timeline-wrap li:last-child {
+	margin-right: 0;
+}
+
+#esport-main-top .timeline-wrap li a {
+	display: block;
+	width: 100%;
+	padding: 14px 18px;
+
+
+	color: #ffffff;
+}
+
+#esport-main-top .timeline-wrap li a .date {
+	font-size: 12px;
+	font-weight: 500;
+}
+
+#esport-main-top .timeline-wrap li a h2 {
+	font-size: 13px;
+	margin-top: 6px;
+	color: #a0a5b6;
+}
+
+#esport-main-top .timeline-wrap li a .status-wrap {
+	margin-top: 35px;
+}
+
+#esport-main-top .timeline-wrap li a .status-wrap .live {
+	font-size: 12px;
+	font-weight: 700;
+}
+
+#esport-main-top .timeline-wrap li a .status-wrap .status {
+	font-size: 12px;
+	font-weight: 500x;
+	color: red;
+}
+
+
+#esport-main-top .live-wrap {
+	padding-bottom: 60px;
+}
+
+#esport-main-top .live-wrap h2 {
+	font-size: 18px;
+	color: #ffffff;
+	margin-bottom: 20px;
+}
+
+#esport-main-top .live-wrap h2 .count {
+	color: #8a7cff;
+}
+
+#esport-main-top .live-wrap ul {
+	
+}
+
+#esport-main-top .live-wrap li {
+	overflow: hidden;
+	width: 625px;
+	background-color: #1f2227;
+	border-radius: 10px;
+}
+
+#esport-main-top .live-wrap a {
+	/*display: block;*/
+	/*width: 100%;*/
+	/*height: 100%;*/
+	align-items: flex-start;
+}
+
+#esport-main-top .live-wrap li img {
+	width: 442px;
+	height: 250px;
+}
+
+#esport-main-top .live-wrap li .txt-wrap{
+	width: 183px;
+	padding: 17px 20px 22px;
+}
+
+#esport-main-top .live-wrap li .txt-wrap span{
+	color: red;
+	background-color: rgba(255, 0, 0, 0.2);
+	border-radius: 3px;
+	padding: 3px 7px;
+}
+
+#esport-main-top .live-wrap li .txt-wrap h3{
+	font-size: 15px;
+	color: #ffffff;
+	margin-top: 8px;
+}
+
+#esport-main .content-wrap {
+	overflow: hidden;
+	padding-top: 30px;
+}
+
+
+#esport-main .left {
+	float: left;
+	width: 900px;
+	/*height: 2000px;*/
+	/*background-color: yellow;*/
+}
+
+#esport-main .right {
+	float: right;
+	width: 357px;
+	/*height: 2000px;*/
+	/*background-color: grey;*/
+}
 
 
